fixed some weird spacing issues in prompt edit page

--- a/public/css/prompts.css
+++ b/public/css/prompts.css
@@ -21,6 +21,7 @@ input[type=submit]{
 
 textarea{
   display: block;
+  text-align: left;
   font-size: 2em;
   height: 20vh;
   width: 90%;
